objects/Transaction_Journal_Entry_Line__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction Journal Entry Lines</relationshipLabel>
        <relationshipName>Transaction_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_GL_Account_Number__c</fullName>
        <formula>Credit_GL_Account__r.blng__GLAccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit GL Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit GL Account</label>
        <referenceTo>blng__GLAccount__c</referenceTo>
        <relationshipLabel>Transaction Journal Entry Lines</relationshipLabel>
        <relationshipName>Transaction_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit_GL_Account_Number__c</fullName>
        <formula>Debit_GL_Account__r.blng__GLAccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debit GL Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit GL Account</label>
        <referenceTo>blng__GLAccount__c</referenceTo>
        <relationshipLabel>Transaction Journal Entry Lines (Debit GL Account)</relationshipLabel>
        <relationshipName>Transaction_Journal_Entry_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Debit__c</fullName>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Transaction Journal Entry Lines</relationshipLabel>
        <relationshipName>Transaction_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Transaction Journal Entry Lines</relationshipLabel>
        <relationshipName>Transaction_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Account_Name__c</fullName>
        <inlineHelpText>GL Account Numbers:
Cash (1020)
Accounts Receivable (1312)
Deferred Revenue (2710)
Sales Tax Payable (2310)
Subscription Revenue (4010)
Usage Revenue (4020)
Professional Services Revenue (4030)
Discounts (4900)
Accounts Payable (5111)</inlineHelpText>
        <label>GL Account Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Deferred Revenue</fullName>
                </value>
                <value>
                    <fullName>Sales Tax Payable</fullName>
                </value>
                <value>
                    <fullName>Subscription Revenue</fullName>
                </value>
                <value>
                    <fullName>Usage Revenue</fullName>
                </value>
                <value>
                    <fullName>Professional Services Revenue</fullName>
                </value>
                <value>
                    <fullName>Discounts</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipLabel>Transaction Journal Entry Lines</relationshipLabel>
        <relationshipName>Transaction_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal_Entry_Line_Type__c</fullName>
        <label>Journal Entry Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Transaction Journal Entry Lines</relationshipLabel>
        <relationshipName>Transaction_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_GL_Account_Number__c</fullName>
        <label>Override GL Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posting_Status__c</fullName>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Journal_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Journal Entry</label>
        <referenceTo>Transaction_Journal_Entry__c</referenceTo>
        <relationshipLabel>Transaction Journal Entry Lines</relationshipLabel>
        <relationshipName>Transaction_Journal_Entry_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Line</fullName>
                </value>
                <value>
                    <fullName>Debit Note Line</fullName>
                </value>
                <value>
                    <fullName>Debit Note Line Allocation (Invoice Line)</fullName>
                </value>
                <value>
                    <fullName>Debit Note Line Allocation (Credit Note Line)</fullName>
                </value>
                <value>
                    <fullName>Credit Note Line</fullName>
                </value>
                <value>
                    <fullName>Credit Note Allocation</fullName>
                </value>
                <value>
                    <fullName>Revenue Transaction</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Allocation (Invoice)</fullName>
                </value>
                <value>
                    <fullName>Payment Allocation (Invoice Line)</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Refund Line (Payment)</fullName>
                </value>
                <value>
                    <fullName>Refund Line (Credit Note Line)</fullName>
                </value>
                <value>
                    <fullName>Realized Gain/Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction Journal Entry Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Transaction_Journal_Entry_Lines</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Posting_Status__c</columns>
        <columns>Finance_Book__c</columns>
        <filterScope>Everything</filterScope>
        <label>Transaction Journal Entry Lines</label>
    </listViews>
    <nameField>
        <displayFormat>TJEL-{000000}</displayFormat>
        <label>Transaction Journal Entry Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Journal Entry Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_DePosting</fullName>
        <active>true</active>
        <errorConditionFormula>Posted__c &amp;&amp; ispickval( Posting_Status__c, &quot;Draft&quot;)</errorConditionFormula>
        <errorMessage>Journal Entry Line has already been posted. You cannot de-post it.</errorMessage>
    </validationRules>
</CustomObject>